--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,7 +5,8 @@
 
 header {
     min-height: 70vh;
-    background-color: #073642;
+    // background-color: #073642;
+    border-bottom: 2px solid white;
 
     ul {
         display: flex;
