--- a/styles/partials/_mixin.scss
+++ b/styles/partials/_mixin.scss
@@ -1,3 +1,5 @@
+$backgroundColour: #030200;
+// $backgroundColour: #202020;
+// $backgroundColour: #31313a;
 $primaryTextColour: #f8f8f8;
-// $backgroundColour: #111111;
 $inactiveTextColour: #708090;
