--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -2,14 +2,15 @@
 //2. Add underscore on nav hover
 //3. Add animation for h1
 //4. Add blinking cursor effect: https://html-online.com/articles/blinking-text-css-animation/
+//5. Make nav fixed on scroll
 
 header {
-    min-height: 70vh;
-    // background-color: #073642;
+    min-height: 100vh;
     border-bottom: 2px solid white;
 
     ul {
         display: flex;
+        justify-content: flex-end;
         padding-top: 50px;
 
         li {
@@ -17,12 +18,40 @@ header {
 
             a {
                 color: $inactiveTextColour;
+                position: relative;
 
+                &:hover, &:active, &:focus {
+                    color: $primaryTextColour;
+
+                    &::after {
+                        @include blink;
+                    }
+                }
             }
+        }
+
+        li:last-child {
+            margin-right: 0;
         }
     }
 
     .heading {
-        margin-top: 200px;
+        // border: 1px solid wheat;
+        // text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        line-height: 1.6;
+        letter-spacing: 1.5px;
+
+        h1 {
+            position: relative;
+
+            &::after {
+                @include blink;
+            }
+        }
     }
 }
