--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -65,9 +65,9 @@
             border-bottom: 2px solid white;
         }
 
-        .projectThree, .projectFour {
+        // .projectThree, .projectFour {
             // padding-top: 100px;
-        }
+        // }
 
         .project {
             padding: 30px 20px;
