--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -55,3 +55,12 @@ i {
     color: $primaryTextColour;
   }
 }
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
