--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,12 +1,8 @@
-//1. Change colours on nav hover
-//2. Add underscore on nav hover
-//3. Add animation for h1
-//4. Add blinking cursor effect: https://html-online.com/articles/blinking-text-css-animation/
-//5. Make nav fixed on scroll
+// Make nav fixed on scroll
 
 header {
     min-height: 100vh;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
 
     ul {
         display: flex;
@@ -37,7 +33,7 @@ header {
 
     .heading {
         // border: 1px solid wheat;
-        // text-align: center;
+        text-align: center;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -53,5 +49,15 @@ header {
                 @include blink;
             }
         }
+    }
+
+    .fa-mouse {
+        font-size: 4rem;
+        color: #f26b38;
+        display: block;
+        text-align: center;
+        margin-top: 600px;
+        animation: bounce 2s ease infinite;
+        cursor: pointer;
     }
 }
