--- a/styles/style.css
+++ b/styles/style.css
@@ -250,9 +250,31 @@ i {
   }
 }
 
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+  }
+}
+
 header {
   min-height: 100vh;
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
 }
 
 header ul {
@@ -281,8 +303,8 @@ header ul li a:hover, header ul li a:active, header ul li a:focus {
 header ul li a:hover::after, header ul li a:active::after, header ul li a:focus::after {
   content: "_";
   position: absolute;
-  -webkit-animation: blink 1s infinite;
-          animation: blink 1s infinite;
+  -webkit-animation: blink 1s ease infinite;
+          animation: blink 1s ease infinite;
 }
 
 header ul li:last-child {
@@ -290,6 +312,7 @@ header ul li:last-child {
 }
 
 header .heading {
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -307,8 +330,19 @@ header .heading h1 {
 header .heading h1::after {
   content: "_";
   position: absolute;
-  -webkit-animation: blink 1s infinite;
-          animation: blink 1s infinite;
+  -webkit-animation: blink 1s ease infinite;
+          animation: blink 1s ease infinite;
+}
+
+header .fa-mouse {
+  font-size: 4rem;
+  color: #f26b38;
+  display: block;
+  text-align: center;
+  margin-top: 600px;
+  -webkit-animation: bounce 2s ease infinite;
+          animation: bounce 2s ease infinite;
+  cursor: pointer;
 }
 
 .about {
