--- a/styles/partials/_mixin.scss
+++ b/styles/partials/_mixin.scss
@@ -1,6 +1,7 @@
 $backgroundColour: #212121;
 $primaryTextColour: #fafafa;
-$inactiveTextColour: #757575;
+$inactiveTextColour: #ababab;
+$iconHoverColour: #f26b38;
 $primaryFontFamily: 'Roboto Mono', monospace;
 
 // $backgroundColour: #030200;
