added contact section

--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -32,6 +32,8 @@
             a {
                 background-color: $primaryTextColour;
                 color: $backgroundColour;
+                // background-color: crimson;
+                // color: white;
                 padding: 5px 10px;
                 margin-right: 10px;
 
