--- a/styles/style.css
+++ b/styles/style.css
@@ -482,3 +482,42 @@ header .fa-mouse {
 .projects .projectFour {
   border-bottom: none;
 }
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 60%;
+}
+
+form input, form textarea, form button {
+  border: 1px solid white;
+  background: transparent;
+  color: #fafafa;
+  margin-bottom: 20px;
+}
+
+form input {
+  padding: 5px 10px;
+}
+
+form textarea {
+  resize: none;
+  padding: 5px 10px;
+}
+
+form button {
+  text-transform: uppercase;
+  padding: 5px 25px;
+  margin: 0 auto 0 0;
+  cursor: pointer;
+}
+
+form button:hover, form button:active, form button:focus {
+  background-color: #fafafa;
+  color: #212121;
+}
