--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -21,6 +21,10 @@
                 &:hover, &:active, &:focus {
                     color: $iconHoverColour;
                     transform: scale(1.1);
+
+                    path {
+                        transform: translateY(-1px) scale(1.1);
+                    }
                 }
             }
 
