added blog and footer

--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -61,6 +61,12 @@ i {
     display: none;
 }
 
+footer {
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 10px 0;
+}
+
 @keyframes blink {
   from, to {
     color: transparent;
