--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,12 @@ i {
   display: none;
 }
 
+footer {
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 10px 0;
+}
+
 @-webkit-keyframes blink {
   from, to {
     color: transparent;
@@ -488,7 +494,10 @@ header .fa-mouse {
   border-bottom: none;
 }
 
-form {
+.blog .post {
+  border: 1px solid white;
+  height: 200px;
+  width: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -496,38 +505,90 @@ form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 60%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-form input, form textarea, form button {
+.blog .post a {
+  font-size: 2.5rem;
+  color: #fafafa;
+  border-bottom: 1px solid white;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.social form input, .social form textarea, .social form button {
   border: 1px solid white;
   background: transparent;
   color: #fafafa;
   margin-bottom: 20px;
 }
 
-form input:focus, form textarea:focus, form button:focus {
+.social form input:focus, .social form textarea:focus, .social form button:focus {
   outline: 2px solid white;
 }
 
-form input {
+.social form input {
   padding: 5px 10px;
 }
 
-form textarea {
+.social form textarea {
   resize: none;
   padding: 5px 10px;
 }
 
-form button {
+.social form button {
   text-transform: uppercase;
   padding: 5px 25px;
   margin: 0 auto 0 0;
   cursor: pointer;
 }
 
-form button:hover, form button:active, form button:focus {
+.social form button:hover, .social form button:active, .social form button:focus {
   background-color: #fafafa;
   color: #212121;
   font-weight: 700;
+}
+
+.social form + div {
+  text-align: justify;
+  padding-left: 50px;
+}
+
+.social form + div p {
+  padding-bottom: 20px;
+}
+
+.social form + div a {
+  color: #fafafa;
+  margin-right: 20px;
+}
+
+.social form + div a:hover, .social form + div a:active, .social form + div a:focus {
+  color: #f26b38;
+}
+
+.social form + div a i {
+  font-size: 5rem;
 }
