--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -5,16 +5,13 @@
         gap: 40px;
 
         // div {
-        //     // border: 1px solid crimson;
+        //     border: 1px solid crimson;
         // }
 
         p {
             line-height: 1.6;
             text-align: justify;
-
-            &:first-of-type {
-                padding-bottom: 20px;
-            }
+            padding-bottom: 20px;
         }
     }
 }
