--- a/styles/partials/_mixin.scss
+++ b/styles/partials/_mixin.scss
@@ -2,6 +2,7 @@ $backgroundColour: #212121;
 $primaryTextColour: #fafafa;
 $inactiveTextColour: #ababab;
 $iconHoverColour: #f26b38;
+// $borderColour: white;
 $primaryFontFamily: 'Roboto Mono', monospace;
 
 // $backgroundColour: #030200;
