--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -1,4 +1,3 @@
-// check elements
 body, h1, h2, h3, p, ul {
     margin: 0;
     padding: 0;
@@ -39,6 +38,7 @@ li {
 
 a {
     text-decoration: none;
+    color: $primaryTextColour;
 }
 
 header, section {
@@ -49,13 +49,13 @@ section {
     padding: 50px 0;
 }
 
-i {
-    font-size: 6rem;
-}
+// i {
+//     font-size: 6rem;
+// }
 
-.iconify {
-    font-size: 7rem;
-}
+// .iconify {
+//     font-size: 7rem;
+// }
 
 .typed-cursor {
     display: none;
