--- a/styles/partials/_blog.scss
+++ b/styles/partials/_blog.scss
@@ -2,7 +2,8 @@
     .post {
         border: 1px solid white;
         height: 200px;
-        width: 30%;
+        // width: 40%;
+        width: 400px;
         display: flex;
         flex-direction: column;
         justify-content: center;
