--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,8 +5,10 @@ header {
     min-height: 100vh;
 
     ul {
+        // border: 1px solid brown;
         display: flex;
         justify-content: flex-end;
+        flex-wrap: wrap;
         padding-top: 50px;
 
         li {
