--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -1,12 +1,15 @@
 .skills {
     .icons {
         display: grid;
-        grid-template-columns: repeat(7, 120px);
-        grid-template-rows: repeat(2, 120px);
+        // grid-template-columns: repeat(7, 120px);
+        // grid-template-rows: repeat(2, 120px);
+        grid-template-columns: repeat(auto-fill, 120px);
+        grid-template-rows: repeat(auto-fill, 120px);
         justify-content: center;
         align-content: center;
-        column-gap: 60px;
-        row-gap: 40px;
+        gap: 40px 60px;
+        // column-gap: 60px;
+        // row-gap: 40px;
 
         li {
             display: flex;
