--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -5,7 +5,7 @@
         // grid-template-rows: repeat(2, 120px);
         grid-template-columns: repeat(auto-fill, 120px);
         grid-template-rows: repeat(auto-fill, 120px);
-        justify-content: center;
+        justify-content: space-between;
         align-content: center;
         gap: 40px 60px;
         // column-gap: 60px;
