--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,6 +1,3 @@
-//make nav fixed on scroll
-//check casing on nav
-
 header {
     min-height: 100vh;
 
@@ -9,6 +6,7 @@ header {
         display: flex;
         justify-content: flex-end;
         flex-wrap: wrap;
+        text-transform: uppercase;
         padding-top: 50px;
 
         li {
@@ -49,7 +47,7 @@ header {
 
     .fa-mouse {
         font-size: 4rem;
-        color: $iconHoverColour;
+        color: $primaryTextColour;
         display: block;
         text-align: center;
         margin-top: 600px;
