--- a/styles/partials/_mixin.scss
+++ b/styles/partials/_mixin.scss
@@ -1,12 +1,14 @@
+//== VARIABLES ==//
+$primaryFontFamily: 'Roboto', sans-serif;
+// $secondaryFontFamily: 'Roboto Mono', monospace;
 $backgroundColour: #212121;
 $primaryTextColour: #fafafa;
 $inactiveTextColour: #ababab;
-$iconHoverColour: #f26b38;
-// $borderColour: white;
-$primaryFontFamily: 'Roboto Mono', monospace;
 
 // $backgroundColour: #030200;
+$iconHoverColour: #f26b38;
 
+//== MIXINS ==//
 @mixin blink {
     &::after {
         content: "_";
